Reactivate GTFS-RT tests